--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,26 @@
 
   "version": "1.0.0",
 
+  "keywords": [
+
+    "ai",
+
+    "upscaling",
+
+    "image",
+
+    "video",
+
+    "nodejs",
+
+    "prisma"
+
+  ],
+
+  "author": "AI Upscaler Team",
+
+  "license": "MIT",
+
   "scripts": {
 
     "start": "node server.js",
@@ -59,12 +79,6 @@
     "sharp": "^0.34.3"
 
   },
-
-  "keywords": [],
-
-  "author": "",
-
-  "license": "ISC",
 
   "description": "",
 
